--- a/yaml/deployment_tomcat.yaml
+++ b/yaml/deployment_tomcat.yaml
@@ -45,7 +45,7 @@ spec:
             matchLabels:
               app: tomcat
       containers:
-      - image: chae45/aaa:v1.0
+      - image: 975049917890.dkr.ecr.ap-northeast-2.amazonaws.com/ecs-tomcat-index:v11.0
         name: tomcat-index-deploy
         ports:
         - containerPort: 8080
@@ -121,7 +121,7 @@ spec:
             matchLabels:
               app: tomcat
       containers:
-      - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/tomcat-menu:v1.0
+      - image: 975049917890.dkr.ecr.ap-northeast-2.amazonaws.com/ecs-tomcat-menu:v11.0
         name: tomcat-menu-deploy
         ports:
         - containerPort: 8080
@@ -196,7 +196,7 @@ spec:
             matchLabels:
               app: tomcat
       containers:
-      - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/tomcat-login:v1.0
+      - image: 975049917890.dkr.ecr.ap-northeast-2.amazonaws.com/ecs-tomcat-login:v11.0
         name: tomcat-login-deploy
         ports:
         - containerPort: 8080
@@ -271,7 +271,7 @@ spec:
             matchLabels:
               app: tomcat
       containers:
-      - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/tomcat-join:v1.0
+      - image: 975049917890.dkr.ecr.ap-northeast-2.amazonaws.com/ecs-tomcat-join:v11.0
         name: tomcat-join-deploy
         ports:
         - containerPort: 8080
@@ -348,7 +348,7 @@ spec:
             matchLabels:
               app: tomcat
       containers:
-      - image: 637423521175.dkr.ecr.ap-northeast-2.amazonaws.com/tomcat-mypage:v1.0
+      - image: 975049917890.dkr.ecr.ap-northeast-2.amazonaws.com/ecs-tomcat-mypage:v11.0
         name: tomcat-mypage-deploy
         ports:
         - containerPort: 8080
